<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myglass.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_catalogue"
        android:name="com.example.myglass.CatalogueFragment"
        android:label="@string/Catalogue"
        tools:layout="@layout/fragment_catalogue" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.myglass.ShopFragment"
        android:label="@string/Shop"
        tools:layout="@layout/fragment_shop" />

</navigation>