<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/logo1"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:elegantTextHeight="true"
        android:text="@string/question2_account"
        android:textColor="@color/Midnight_Blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/Red_logo"
        android:textSize="20sp"
        android:elegantTextHeight="true"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/alreadyHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/Password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputUsername"
        app:layout_constraintStart_toStartOf="@+id/inputUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername"
        tools:ignore="TextContrastCheck" />


    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_login"
        android:text="@string/login"
        android:textColor="@color/Midnight_Blue"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>