<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/only_logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/Midnight_Blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.244"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="name"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/Surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputName"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/inputName"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputSurname"
        app:layout_constraintStart_toStartOf="@+id/inputSurname"
        app:layout_constraintTop_toBottomOf="@+id/inputSurname"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputUsername"
        app:layout_constraintStart_toStartOf="@+id/inputUsername"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_sign_up"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/question_account"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Midnight_Blue"
        app:layout_constraintEnd_toEndOf="@+id/button_signup"
        app:layout_constraintStart_toStartOf="@+id/button_signup"
        app:layout_constraintTop_toBottomOf="@+id/button_signup"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>