<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".FragmentOcchialiDetails">

    <ImageView
        android:id="@+id/occ_img"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/occ_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elegantTextHeight="true"
        android:textColor="@color/Midnight_Blue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occ_img"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/occ_desc"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:elegantTextHeight="true"
        android:textColor="@color/Midnight_Blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occ_nome"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/prezzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elegantTextHeight="true"
        android:text="@string/price"
        android:textColor="@color/Red_logo"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/occ_prezzo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occ_desc"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginEnd="5dp"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/occ_prezzo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elegantTextHeight="true"
        android:textColor="@color/Red_logo"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occ_desc"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="80dp"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:id="@+id/occ_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elegantTextHeight="true"
        android:textColor="@color/Red_logo"
        android:text="@string/euro"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/occ_prezzo"
        app:layout_constraintTop_toBottomOf="@+id/occ_desc"
        app:layout_constraintHorizontal_bias="0"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <Button
        android:id="@+id/button_addshop"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_login"
        android:text="@string/add_shop"
        android:textColor="@color/Midnight_Blue"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occ_prezzo"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>